--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react_ujs": "^2.6.2",
     "semantic-ui-react": "^2.1.4",
     "semantic-ui-sass": "^2.4.2",
